--- a/localisation/canon_systems_l_english.yml
+++ b/localisation/canon_systems_l_english.yml
@@ -163,7 +163,7 @@
  NAME_Mindor_P2: "Taspan II"
  
  ### Bakuran Systems ###
-   
+
  #Bakura
  NAME_Bakura: "Bakura"
  NAME_Bakura_S: "Bakura"
@@ -773,7 +773,7 @@
  ### Corellian Systems ###
  
  #Corellia
- NAME_Corellia: "Corellian"
+ NAME_Corellia: "Corellia"
  NAME_Corellia_S: "Corell"
  NAME_Corellia_P1: "Corellia"
  NAME_Corellia_P1_1: "Gus Talon"
