--- a/localisation/english/swnd_main_l_english.yml
+++ b/localisation/english/swnd_main_l_english.yml
@@ -1526,7 +1526,7 @@ l_english:
  EMPIRE_DESIGN_MonCalaMonarchy:0 "§RMon Calamari Monarchy§!"
  EMPIRE_DESIGN_MonCalaMonarchy_desc:0 "The Mon Calamari are a peaceful aquatic race that originate from the ocean world of Mon Cala, which their King rules from the coral Mon Cala City. The southern hemisphere of the planet contains the renowned Mon Calamari Shipyards, capable of rapidly deploying their Mon Cal Cruisers, each of which is uniquely designed. The Monarchy has anti-Imperial sympathies, which could align those resources to fighting the Empire. The planet is shared with the more aggressive Quarren, also an aquatic race. Relations have historically been amicable, but separatist sentiments have risen amongst the Quarren on occasion. Despite being aquatic, both races have spread throughout the galaxy. Mon Calamari are often found in engineering roles, while the Quarren have frequently been hired as guards or mercenaries."
  EMPIRE_DESIGN_DorinCommonwealth:0 "§WDorin Commonwealth§!"
- EMPIRE_DESIGN_DorinCommonwealth_desc:0 "The Kel Dors have always been a proud people even though they must wear breathing masks and protective goggles when leaving their homeworld  due to carbon dioxide, nitrogen, and oxygen gases being toxic to them. They have proved themselves to be a very resourceful people to seek a peaceful solutions to any problem."
+ EMPIRE_DESIGN_DorinCommonwealth_desc:0 "The Kel Dors have always been a proud people even though they must wear breathing masks and protective goggles when leaving their homeworld due to carbon dioxide, nitrogen, and oxygen gases being toxic to them. They have proved themselves to be a very resourceful people to seek a peaceful solutions to any problem."
  EMPIRE_DESIGN_UtapauanCommittee:0 "§WUtapauan Committee§!"
  EMPIRE_DESIGN_UtapauanCommittee_desc:0 "Utapau always valued their neutrality, but that ended when the planet was annexed by the CIS during the Clone Wars. A brutal Imperial occupation commenced alongside Order 66 and has continued until recently. Anti-Imperial and Criminal sentiments have grown across the world. Utapau was never a member of the Old Republic, but maybe a new one would offer an opportunity to be free and safe?"
  EMPIRE_DESIGN_PantoranAssembly:0 "§WPantoran Assembly§!"
@@ -2024,19 +2024,19 @@ l_english:
  rebel_federation_lvl_1_2:0 "Equality For All"
  rebel_federation_lvl_1_2_desc:0 "No one species can claim ownership over the principles of Equality, Justice, and Freedom. These shared ideals are universal, and are worth fighting for."
  rebel_federation_lvl_1_3:0 "Hit and Run Tactics"
- rebel_federation_lvl_1_3_desc:0 "To counter the superiority of the Empire’s conventional forces, the §HRebel Alliance§! has been forced to master a variety of guerilla tactics."
+ rebel_federation_lvl_1_3_desc:0 "To counter the superiority of the Empire's conventional forces, the §HRebel Alliance§! has been forced to master a variety of guerilla tactics."
  rebel_federation_lvl_2_1:0 "Bothan Spy Networks"
- rebel_federation_lvl_2_1_desc:0 "Though informal, the §HRebel Alliance’s§! Deepening relationship with the §HBothan Spynet§! has greatly enhanced its already considerable espionage and sabotage capabilities."
+ rebel_federation_lvl_2_1_desc:0 "Though informal, the §HRebel Alliance's§! Deepening relationship with the §HBothan Spynet§! has greatly enhanced its already considerable espionage and sabotage capabilities."
  rebel_federation_lvl_2_2:0 "Humanitarian Support from Alderaan"
- rebel_federation_lvl_2_2_desc:0 "Steeped in an ancient tradition of mutual aid, philanthropy, and generosity, many Alderaanians have found themselves at the center of the §HRebel Alliance’s§! foreign aid and disaster relief programs."
+ rebel_federation_lvl_2_2_desc:0 "Steeped in an ancient tradition of mutual aid, philanthropy, and generosity, many Alderaanians have found themselves at the center of the §HRebel Alliance's§! foreign aid and disaster relief programs."
  rebel_federation_lvl_2_3:0 "Local Militias"
- rebel_federation_lvl_2_3_desc:0 "The growing sophistication of the §HRebel Alliance’s§! recruiting strategy has allowed it to unite once fractious planetary defense forces, private armies, and regional militias into a single fighting force."
+ rebel_federation_lvl_2_3_desc:0 "The growing sophistication of the §HRebel Alliance's§! recruiting strategy has allowed it to unite once fractious planetary defense forces, private armies, and regional militias into a single fighting force."
  rebel_federation_lvl_3_1:0 "Mon Calamari Engineering"
  rebel_federation_lvl_3_1_desc:0 "Honed over generations in the shipyards over Dac, Mon Calamari engineering is more than capable of building warships every bit as capable as those mass-produced by the shipyards of the Core."
  rebel_federation_lvl_3_2:0 "Smuggler Activities"
- rebel_federation_lvl_3_2_desc:0 "Though the §HRebel Alliance§! fights for a fair and just government, necessity  has forced it to become increasingly adept at leveraging its connections to the criminal underworld to meet its demand for weapons, ships, and supplies."
+ rebel_federation_lvl_3_2_desc:0 "Though the §HRebel Alliance§! fights for a fair and just government, necessity has forced it to become increasingly adept at leveraging its connections to the criminal underworld to meet its demand for weapons, ships, and supplies."
  rebel_federation_lvl_3_3:0 "Massassi Leadership"
- rebel_federation_lvl_3_3_desc:0 "Forged as much in the humid conference rooms of Yavin 4 as much as in the crucible of battle, the §HRebel Alliance’s§! core leaders have endured terrible defeats, and celebrated great triumphs. Working together, they have grown what was once a small, rag-tag group of political dissidents into a force capable of challenging the might of the §GEmpire§!"
+ rebel_federation_lvl_3_3_desc:0 "Forged as much in the humid conference rooms of Yavin 4 as much as in the crucible of battle, the §HRebel Alliance's§! core leaders have endured terrible defeats, and celebrated great triumphs. Working together, they have grown what was once a small, rag-tag group of political dissidents into a force capable of challenging the might of the §GEmpire§!"
  rebel_federation_lvl_4_1:0 "Rebel Supply Lines"
  rebel_federation_lvl_4_1_desc:0 "The §HRebel Alliance§H may fight the §GGalactic Empire§! with its words as often its fists, but it marches on its stomach. Everything from uniforms to turbolasers must be sourced from somewhere. Fortunately, §HRebel§! scroungers are second to none."
  rebel_federation_lvl_4_2:0 "Heir to the Old Republic"
@@ -3142,11 +3142,11 @@ l_english:
  star_forge_d:0 "Deconstruct Megastructure"
  star_forge_d_DESC:0 "§RThis Button will Deconstruct the Megastructure immediately!§!"
  deathstar_0:0 "DS-1 Orbital Battle Station Construction Stage"
- deathstar_0_DESC:0 "The construction cradle for the DS-1 \"Death Star\" Battle Station, containing the massive tractor beam projectors, gravity tethers, and scaffolds needed to keep the superweapon stationary during construction.  "
+ deathstar_0_DESC:0 "The construction cradle for the DS-1 \"Death Star\" Battle Station, containing the massive tractor beam projectors, gravity tethers, and scaffolds needed to keep the superweapon stationary during construction."
  deathstar_0_MEGASTRUCTURE_DETAILS:0 "Both as an impregnable fortress and as a symbol of the Emperor's inviolable rule, the deep-space mobile battle station is an unparalleled achievement."
  deathstar_1:0 "DS-1 Orbital Battle Station Exoskeleton"
  deathstar_1_DESC:0 "The structural frame of the DS-1 \"Death Star\" Battle Station, currently in the initial stages of construction."
- deathstar_2:0 "Orbital Battle Station Outer Hull"
+ deathstar_2:0 "DS-1 Orbital Battle Station Outer Hull"
  deathstar_2_DESC:0 "The armored superstructure of the DS-1 \"Death Star\" Battle Station, currently in the early stages of construction."
  deathstar_3:0 "DS-1 Orbital Battle Station Dish"
  deathstar_3_DESC:0 "A partially completed DS-1 \"Death Star\" Battle Station, lacking only crew quarters and the signature composite beam superlaser."
@@ -3283,7 +3283,7 @@ l_english:
  fortress_colony:0 "Fortress Districts"
  fortress_colony_desc:0 "Partial conscription of the planet's population will allow this colony to support 5 additional $district_fortress_plural$. These Districts will provide jobs to enhance our Naval Capacity and Garrison."
  foundry_colony:0 "Forge Districts"
- foundry_colony_desc:0 "Relaxing environmental regulations will allow this colony to support 5 additional $district_manufactory_plural$.  These Districts will provide jobs to enhance our Alloy production."
+ foundry_colony_desc:0 "Relaxing environmental regulations will allow this colony to support 5 additional $district_manufactory_plural$. These Districts will provide jobs to enhance our Alloy production."
  refinery_colony:0 "Refinery Districts"
  refinery_colony_desc:0 "Expropriating unused land will allow us to optimize the routing of pipelines and refinery infrastructure, allowing this colony to support 5 additional $district_refinery_plural$. These Districts will provide jobs to refine Hyperfuel from Hypermatter."
  tech_colony:0 "Tech Districts"
@@ -3505,6 +3505,8 @@ l_english:
  sy_triellus_trade_route_desc:0 "§BTriellus Trade Route§!\n    Hyperlane Speed: §G+40%§!\n    Windup/-down Speed: §G+50%§!"
  sy_unknown_regions:0 "Unknown Region"
  sy_unknown_regions_desc:0 "§MUnknown Region§!\n    Ship Speed: §R-50%§!\n    Hyperlane Speed: §R-50%§!\n    Windup/-down Speed: §R-50%§!"
+ can_not_settle_unknown_regions: "We will require advanced sensors and a dedicated survey effort before we are able to settle the §MUnknown Regions§!"
+
  pc_tidallylocked:0 "Tidally-Locked World"
  pc_tidallylocked_desc:0 "A rocky world with a nitrogen-oxygen atmosphere. With the planet tidally locked to its sun, one side of the planet is in constant daylight, while the other is in constant night. A thin habitable zone exists in the twilight region. Constant sunlight and wind make for ideal food and energy generation."
  mod_pc_tidallylocked_habitability:0 "$pc_tidallylocked$ Habitability"
@@ -6431,13 +6433,13 @@ l_english:
  mandate_fiscal_reserve_chain_desc:0 "[This.GetRulerTitle] [This.GetRulerName] was elected on a platform of §Ythrift§! and §Ycarefully deliberated spending§!, guaranteeing that the §H[Root.GetName]§! will enjoy reserves of §Yat least £energy£ 1000§! Credits §Yby the end of their reign§!."
  enclave_mineral_trade_ended:0 "Insufficient £energy£ §HCredits§! to maintain resource deals with Trader Enclaves."
  enclave_energy_trade_ended:0 "Insufficient £energy£ §HCredits§! to maintain resource deals with Trader Enclaves."
- liquidated_1:0 "§Y1 $clue$§! Liquidated:\n §G+500§! £engineering  Engineering Research\n §G+500§! £energy£ Credits"
- liquidated_2:0 "§Y2 $clues$§! Liquidated:\n §G+1000§! £engineering  Engineering Research\n §G+1000§! £energy£ Credits"
- liquidated_3:0 "§Y3 $clues$§! Liquidated:\n §G+1500§! £engineering  Engineering Research\n §G+1500§! £energy£ Credits"
- liquidated_4:0 "§Y4 $clues$§! Liquidated:\n §G+2000§! £engineering  Engineering Research\n §G+2000§! £energy£ Credits"
- liquidated_5:0 "§Y5 $clues$§! Liquidated:\n §G+2500§! £engineering  Engineering Research\n §G+2500§! £energy£ Credits"
- liquidated_6:0 "§Y6 $clues$§! Liquidated:\n §G+3000§! £engineering  Engineering Research\n §G+3000§! £energy£ Credits"
- liquidated_7:0 "§Y7 $clues$§! Liquidated:\n §G+3500§! £engineering  Engineering Research\n §G+3500§! £energy£ Credits"
+ liquidated_1:0 "§Y1 $clue$§! Liquidated:\n §G+500§! £engineering Engineering Research\n §G+500§! £energy£ Credits"
+ liquidated_2:0 "§Y2 $clues$§! Liquidated:\n §G+1000§! £engineering Engineering Research\n §G+1000§! £energy£ Credits"
+ liquidated_3:0 "§Y3 $clues$§! Liquidated:\n §G+1500§! £engineering Engineering Research\n §G+1500§! £energy£ Credits"
+ liquidated_4:0 "§Y4 $clues$§! Liquidated:\n §G+2000§! £engineering Engineering Research\n §G+2000§! £energy£ Credits"
+ liquidated_5:0 "§Y5 $clues$§! Liquidated:\n §G+2500§! £engineering Engineering Research\n §G+2500§! £energy£ Credits"
+ liquidated_6:0 "§Y6 $clues$§! Liquidated:\n §G+3000§! £engineering Engineering Research\n §G+3000§! £energy£ Credits"
+ liquidated_7:0 "§Y7 $clues$§! Liquidated:\n §G+3500§! £engineering Engineering Research\n §G+3500§! £energy£ Credits"
  challenge_type_bidding_war_desc:0 "All the wonders of advanced civilizations can ultimately be traced back to one simple concept: available resources. The right to rule should not be measured by the size of the brain or the strength in the arm, but in the depth of the pocket.\n\n§YVictory will depend on:\n- Credits (£energy£) available.\n- Credits (£energy£) spent.§!\n\n§HBids are paid upfront. The final pot is at the winner's discretion.§!"
  BUILD_MINING_STATION_ORDER_DESC:0 "§YMining Stations§! are used to collect Minerals, Credits and Strategic Resources from uninhabited planets, stars and asteroids. Mining Stations that collect Credits do not cost any upkeep."
  SECTOR_ENERGY_STOCKPILE:0 "Credits Stockpile"
@@ -6531,10 +6533,10 @@ l_english:
  galactic_new_order_chain: "Galactic New Order"
  galactic_new_order_chain_title: "Galactic New Order"
  galactic_new_order_chain_desc: "We have been tested, but we have emerged stronger. We move forward as one people: the Imperial citizens of the first Galactic Empire. We will prevail. Ten thousand years of peace begins today."
- new_order_level_2_req_tooltip: "£trigger_no£  Has completed the §Yfirst§! §H$galactic_new_order_chain$§! Special Project"
- new_order_level_3_req_tooltip: "£trigger_no£  Has completed the §Ysecond§! §H$galactic_new_order_chain$§! Special Project"
- new_order_level_4_req_tooltip: "£trigger_no£  Has completed the §Ythird§! §H$galactic_new_order_chain$§! Special Project"
- new_order_level_5_req_tooltip: "£trigger_no£  Has completed the §Yfourth§! §H$galactic_new_order_chain$§! Special Project"
+ new_order_level_2_req_tooltip: "£trigger_no£ Has completed the §Yfirst§! §H$galactic_new_order_chain$§! Special Project"
+ new_order_level_3_req_tooltip: "£trigger_no£ Has completed the §Ysecond§! §H$galactic_new_order_chain$§! Special Project"
+ new_order_level_4_req_tooltip: "£trigger_no£ Has completed the §Ythird§! §H$galactic_new_order_chain$§! Special Project"
+ new_order_level_5_req_tooltip: "£trigger_no£ Has completed the §Yfourth§! §H$galactic_new_order_chain$§! Special Project"
  new_order_level_2_req_clear_tooltip: "£trigger_yes£ Has completed the §Yfirst§! §H$galactic_new_order_chain$§! Special Project"
  new_order_level_3_req_clear_tooltip: "£trigger_yes£ Has completed the §Ysecond§! §H$galactic_new_order_chain$§! Special Project"
  new_order_level_4_req_clear_tooltip: "£trigger_yes£ Has completed the §Ythird§! §H$galactic_new_order_chain$§! Special Project"
@@ -6599,9 +6601,6 @@ l_english:
  menp_fear: "Fear"
  menp_fear_desc: "The regional governors now have direct control over their territories. Fear will keep the local systems in line."
 
- col_ecu_foundry_custom: "$mod_planet_building_foundry_1_build_speed_mult$: §G+25%§!\n$mod_planet_district_industrial_build_speed_mult$: §G+25%§!\n$mod_planet_metallurgists_upkeep_mult$: §G-20%§!\n$mod_planet_metallurgists_produces_mult$: §G+20%§!\n$mod_planet_electronics_manufacturers_upkeep_mult$: §G-10%§!\n$mod_planet_electronics_manufacturers_produces_mult$: §G5%§!\n\n§YIndustrial Districts§! will shift one job from Consumer Goods to Alloy production if possible."
- col_ecu_factory_custom: "$mod_planet_building_factory_1_build_speed_mult$: §G+25%§!\n$mod_planet_district_industrial_build_speed_mult$: §G+25%§!\n$mod_planet_artisans_upkeep_mult$: §G-20%§!\n$mod_planet_artisans_produces_mult$: §G+10%§!\n$mod_planet_electronics_manufacturers_upkeep_mult$: §G-10%§!\n$mod_planet_electronics_manufacturers_produces_mult$: §G5%§!\n$mod_planet_ammunition_manufacturers_upkeep_mult$: §G-10%§!\n$mod_planet_ammunition_manufacturers_produces_mult$: §G5%§!\n\n§YIndustrial Districts§! will shift one job from Alloy to Consumer Goods production if possible."
-
  gov_rebel_alliance: "Alliance Civil Command"
  gov_rebel_alliance_desc: "The Alliance Civil Command functions as the civilian governing body of the Rebel Alliance made up of six members of the Alliance Cabinet. It functions alongside the Alliance military and shares the overall goal of restoring the Republic and Galactic Senate."
  gov_resistance_movement: "Resistance Movement"
@@ -6616,3 +6615,5 @@ l_english:
 
  SWND_TRADE_RELAYS: "Trade relays"
  SWND_TRADE_RELAYS_TOOLTIP: "Links the systems along major hyperjump routes with relay megastructures. Travel along these routes will be §Hsignificantly faster§! and the difference between core systems and the expansion regions will be clearly felt."
+
+ ssolar_hub: "Solar Hub"
