--- a/localisation/english/swnd_modifiers_l_english.yml
+++ b/localisation/english/swnd_modifiers_l_english.yml
@@ -211,7 +211,7 @@ l_english:
  em_military_institution_desc:0 "Military High Command manages strategic and operational planning of both ground- and space-based military forces. A motley collection of veteran officers from the Clone Wars and ambitious young adjutants, Military High Command is where most of Admirals and Generals come from, and where few long to return."
  swp_menu_disable_perm:0 "§RDisable permanent activation§!"
  em_empire_tier_1_hutt_cartel:0 "Criminal Network"
- em_empire_tier_1_hutt_cartel_desc:0 "The Hutt Cartel spends £influence£ §BInfluence§!  to boost the productivity and profitability of its criminal enterprises."
+ em_empire_tier_1_hutt_cartel_desc:0 "The Hutt Cartel spends £influence£ §BInfluence§! to boost the productivity and profitability of its criminal enterprises."
  em_empire_tier_1_hutt_cartel_perma:0 "$em_empire_tier_1_hutt_cartel$"
  em_empire_tier_1_hutt_cartel_perma_desc:0 "$em_empire_tier_1_hutt_cartel_desc$"
  em_empire_tier_1_csa:0 "Favorable Deal"
@@ -219,7 +219,7 @@ l_english:
  em_empire_tier_1_csa_perma:0 "$em_empire_tier_1_csa$"
  em_empire_tier_1_csa_perma_desc:0 "$em_empire_tier_1_csa_desc$"
  em_empire_tier_1_cis_remnant:0 "Enhanced Droids"
- em_empire_tier_1_cis_remnant_desc:0 "The CIS Remnant uses its £influence£ §BInfluence§!  to leverage its past experience with managing droid workforces to enhance the productivity of its workforce."
+ em_empire_tier_1_cis_remnant_desc:0 "The CIS Remnant uses its £influence£ §BInfluence§! to leverage its past experience with managing droid workforces to enhance the productivity of its workforce."
  em_empire_tier_1_cis_remnant_perma:0 "$em_empire_tier_1_cis_remnant$"
  em_empire_tier_1_cis_remnant_perma_desc:0 "$em_empire_tier_1_cis_remnant_desc$"
  em_empire_tier_1_galactic_empire:0 "Empire Day Celebration"
@@ -283,7 +283,7 @@ l_english:
  em_empire_tier_2_rebel_alliance_target_1:0 "Swift Raids"
  em_empire_tier_2_rebel_alliance_target_1_desc:0 "We have launched a new campaign to harass and interdict merchant ships transiting our enemy's major trade routes."
  em_empire_tier_2_rebel_alliance_target_2:0 "Rebel Raids"
- em_empire_tier_2_rebel_alliance_target_2_desc:0 "Terrified of our Navy's might,  the Alliance scum have taken to raiding our trade routes, threatening our supply lines, and interrupting trade."
+ em_empire_tier_2_rebel_alliance_target_2_desc:0 "Terrified of our Navy's might, the Alliance scum have taken to raiding our trade routes, threatening our supply lines, and interrupting trade."
  em_empire_tier_2_galactic_empire_target_1:0 "Imperial War Machine"
  em_empire_tier_2_galactic_empire_target_1_desc:0 "We have leveraged our §YInstitution's§! organizational prowess to accelerate our ship building efforts."
  em_empire_tier_2_galactic_empire_target_2:0 "Imperial Suppression"
@@ -303,7 +303,7 @@ l_english:
  em_empire_tier_3_galactic_empire:0 "Secret Imperial Research Projects"
  em_empire_tier_3_galactic_empire_desc:0 "Spend £influence£ §BInfluence§! to release a new tranche of funding for the Imperial Department of Military Research, allowing them to explore designs for new ships, superweapons and megastructures."
  em_empire_tier_3_cis_remnant:0 "War Economy"
- em_empire_tier_3_cis_remnant_desc:0 "The planets of the CIS have more experience with total war than most. By spending  £influence£ §BInfluence§!, we will return to a war footing, greatly enhancing the productivity of our military industrial complex."
+ em_empire_tier_3_cis_remnant_desc:0 "The planets of the CIS have more experience with total war than most. By spending £influence£ §BInfluence§!, we will return to a war footing, greatly enhancing the productivity of our military industrial complex."
  em_empire_tier_3_csa_1:0 "CEC Support"
  em_empire_tier_3_csa_1_desc:0 "We have placed a massive new order for state-of-the-art warships with the Corellian Engineering Corporation."
  em_empire_tier_3_csa_2:0 "Kuat Support"
@@ -321,7 +321,7 @@ l_english:
  em_empire_tier_3_economy:0 "Maximum Efficiency"
  em_empire_tier_3_economy_desc:0 "We can improve the efficiency of our production facilities by offering workers temporary bonuses, using surplus materials, and loosening safety standards. We cannot, however, maintain this level of activity indefinitely."
  em_empire_tier_3_military:0 "War Economy"
- em_empire_tier_3_military_desc:0 "By spending  £influence£ §BInfluence§!, we can place our economy on a war footing, greatly enhancing the productivity of our military industrial complex."
+ em_empire_tier_3_military_desc:0 "By spending £influence£ §BInfluence§!, we can place our economy on a war footing, greatly enhancing the productivity of our military industrial complex."
  em_empire_tier_3_diplomacy:0 "Diplomatic Powerhouse"
  em_empire_tier_3_diplomacy_desc:0 "Spend £influence£ §BInfluence§! to call in various favors throughout the galaxy, enhancing our diplomatic weight and reducing border friction with our neighbors."
  em_empire_tier_3_research_physics:0 "Physics Breakthrough"
@@ -436,7 +436,7 @@ l_english:
  mod_weapon_type_fighter_speed_mult:0 "Fighter Speed"
  mod_ship_swp_star_destroyer_size_cost_mult:0 "Star Destroyer Ship Size Build Cost"
  mod_ship_swp_battle_dragon_size_cost_mult:0 "Battle Dragon Ship Size Build Cost"
- mod_ship_swp_mando_destroyer_size_cost_mult:0 "Mandalorian Destoryer Ship Size  Build Cost"
+ mod_ship_swp_mando_destroyer_size_cost_mult:0 "Mandalorian Destoryer Ship Size Build Cost"
  mod_ship_swp_mon_cal_size_cost_mult:0 "Mon Calamari Ship Size Build Cost"
  mod_planet_jobs_worker_spice_produces_mult:0 "Worker Spice Production"
  mod_planet_jobs_hyperfuel_produces_mult:0 "Hyperfuel Production"
@@ -496,6 +496,7 @@ l_english:
  mod_planet_jobs_ammunition_produces_mult:0 "£ammunition£ $ammunition$ from £job£ Jobs"
  mod_planet_jobs_sr_starfighter_parts_produces_mult:0 "£sr_starfighter_parts£ $sr_starfighter_parts$ from £job£ Jobs"
  mod_planet_jobs_spice_produces_mult:0 "£spice£ $spice$ from £job£ Jobs"
+ mod_planet_jobs_tibanna_gas_produces_mult:0 "£tibanna_gas£ $tibanna_gas$ from £job£ Jobs"
  mod_planet_tibanna_miners_produces_mult:0 "£tibanna_gas£ $tibanna_gas$ from £job£ Jobs"
  mod_planet_fuel_techs_produces_mult:0 "£hyperfuel£ $hyperfuel$ from £job£ Jobs"
  mod_planet_weapon_makers_produces_mult:0 "£electronics£$electronics$, £sr_plasma_cells£$sr_plasma_cells$, £ammunition£$ammunition$, £sr_starfighter_parts£$sr_starfighter_parts$ from£job£Jobs"
@@ -570,6 +571,8 @@ l_english:
  pm_new_droids_low_desc:0 "Tweaks to the secondary operation protocols of the planet's droid workforce have resulted in modest productivity gains."
  habitability_0:0 "§RUninhabitable§!"
  habitability_0_desc:0 "This Planet was chosen by the random system to be uninhabitable."
+ pm_habitability_humans: "Human Capital World"
+ pm_habitability_humans_desc: "The Capital of a human empire, reminiscent of Coruscant"
  pm_tibanna_anomaly:0 "Tibanna Deposit"
  pm_tibanna_anomaly_desc:0 "Prospectors have located a unique, persistent weather pattern that has trapped a sizable amount of tibanna gas."
  pm_hypermatter_anomaly:0 "Hypermatter Deposit"
