--- a/localisation/english/swnd_names_l_english.yml
+++ b/localisation/english/swnd_names_l_english.yml
@@ -4756,6 +4756,7 @@ Ulrikae: "Ulrikae"
  NAME_Katana_Dreadnought_Imperial:0 "Imperial Katana Dreadnought"
  NAME_Katana_Dreadnought_Cis:0 "CIS Katana Dreadnought"
  NAME_Katana_Dreadnought_Rebel:0 "Rebel Katana Dreadnought"
+ NAME_Yuuzhan_Vong:0 "Yuuzhan Vong"
  NAME_Vong_Scout:0 "Yorik-Stronha"
  NAME_Vong_Il_Frill_Ma_Nat:0 "Il Friil Ma Nat"
  NAME_Vong_Sporeship:0 "Ro'ik Chuun Sporeship"
@@ -4894,7 +4895,7 @@ Ulrikae: "Ulrikae"
  NAME_Sandpeople_Nation: "Tusken Raiders"
  NAME_Tusken_Raider: "Tusken Raider"
  NAME_xq_trading_station: "[This.Planet.GetName] Station"
- NAME_megastructure_shipyard: "[This.Planet.GetName] Ship Yards"
+ NAME_megastructure_shipyard: "[Root.GetName] Ship Yards"
  NAME_megastructure_shipyard_start: "[shipyard_site.GetName] Ship Yards"
  NAME_megastructure_kwa_gateway: "[This.Solar_System.GetName] Kwa Gateway"
  NAME_megastructure_starforge: "[This.Planet.GetName] Starforge"
