--- a/localisation/swnd_wip_l_english.yml
+++ b/localisation/swnd_wip_l_english.yml
@@ -226,6 +226,12 @@
  swp_legacy.2006.w: "Ascendancy §RStar Destroyer§!"
  swp_legacy.2006.x: "Tector §RTector Star Destroyer§!"
  swp_legacy.2006.y: "Interdictor §MInterdictor Star Destroyer§!"
+ swp_legacy.2006.z: "Allegiance §HBattlecruiser§!"
+ swp_legacy.2006.aa: "Titan §RAdvanced Battlecruiser§!"
+ swp_legacy.2006.ab: "Lucrehulk §HBattlecruiser§!"
+ swp_legacy.2006.ac: "Phalanx §HBattlecruiser§!"
+ swp_legacy.2006.ad: "Home One §RAdvanced Battlecruiser§!"
+ swp_legacy.2006.ae: "Star Home §RAdvanced Battlecruiser§!"
 
 
  #by Pretender
